<resources>
    <string name="app_name">FoodieLife</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="action_register">Register</string>
    <string name="name_display">Name Display Here</string>
    <string name="email_display">Email Display Here</string>
    <string name="logout_google_account">LogOut Google Account</string>
<!--
    naba web ID clients OAuth 2.0
    <string name="server_client_id">842390643144-ar17dqtijvv8dbnp0ubaiv17icfq7pv8.apps.googleusercontent.com</string>
-->
    <!--
    vincent web ID clients OAuth 2.0 -->
    <string name="server_client_id">463129439514-btmuo8a3veluu4kmqslcvrbv673vmsh2.apps.googleusercontent.com</string>

    <!-- tsy web ID clients OAuth 2.0
    <string name="server_client_id">11574219439-j8opo7fiibf6ksmld7b96ppsnrm7ehag.apps.googleusercontent.com</string>
-->

    <string name="location_permission_denied">This application requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="my_friends">My friends</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="prompt_name">Restaurant Name</string>
    <string name="prompt_address">Restaurant Address (Optional)</string>
    <string name ="prompt_description">Restaurant Description</string>

    <string name="get_location_failed">Could not determine current position, please check GPS action status</string>
    <string name="action_add_restaurant">Submit</string>
    <string name="add_restaurant_button_desc">Add Restaurant</string>
    <string name="add_restaurant_failed">Restaurant was not added, please try again later</string>

    <string name="get_restaurants_failed">Could not fetch restaurants, please try again later</string>

    <string name="get_dishes_failed">Could not fetch dishes, please try again later</string>

    <string name="get_place">Get Place</string>
    <string name="google_place_api">AIzaSyA07u6ZBcxFNTj2Ti_SX05Muuvzl_cdnCE</string>

    <string name="take_picture">add picture</string>
    <string name="prompt_dish_name">Dish Name</string>
    <string name="prompt_dish_description">Dish Description</string>
    <string name="mark_bar">Mark</string>
    <string name="prompt_mark_description">Comment</string>
    <string name="submit_btn">Submit</string>

    <string name="info_title_text">Restaurant Information</string>
    <string name="add_dish_post_on_failed">Post was not save, please try again later</string>
    <string name="add_dish_post_on_success">The is succefuly create.</string>
    <string name="add_mark_on_failed">Error Add Mark</string>
    <string name="add_mark">Add Mark</string>
</resources>
