<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="319dp"
                android:layout_height="129dp"
                android:layout_margin="25dp"
                android:id="@+id/dishImageView" />

            <Button
                android:text="@string/take_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addPictureBtn" />

            <TextView
                android:text="Mark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mark" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mark_bar"
                android:numStars="5"
                android:stepSize="1.0"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_mark_description"
                    android:id="@+id/mark_description"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/submit_btn" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>