<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.epitech.foodielife.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/prof_section"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/prof_pic"
            android:src="@drawable/photo"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/name_display"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/name"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/email_display"
                android:textSize="12sp"
                android:textStyle="bold"
                android:id="@+id/email"
                android:layout_marginTop="10dp"
                android:gravity="center"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_google_account"
                android:id="@+id/bn_logout"
                />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/bn_login"
        ></com.google.android.gms.common.SignInButton>



</LinearLayout>
